<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content"
	android:orientation="vertical">
	<TableLayout 
	android:id="@+id/table_cab" 
	android:layout_height="wrap_content" 
	android:layout_width="fill_parent"
	android:orientation="vertical">
			<Button 
			android:layout_width="wrap_content" 
			android:layout_height="fill_parent" 
			android:id="@+id/cab_1"
			android:textSize="40sp"
			android:text="@string/str_calibration" 
			android:textColor="@drawable/blue"/>
<TableLayout 
	android:id="@+id/tableLayout2" 
	android:layout_height="wrap_content" 
	android:layout_width="fill_parent">
	<TableRow 
	    android:id="@+id/table2" 
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content">
	    <CheckBox
    android:id="@+id/CheckBox"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:text="@string/str_open_button"/>		
			<Button
		    android:id="@+id/delay"
		    android:layout_width="wrap_content"
		    android:layout_height="fill_parent"
		    android:layout_weight="3"
		    android:text="@string/str_delay"
		    android:textColor="@drawable/red" />
			<Button
		    android:id="@+id/get_offset"
		    android:layout_width="wrap_content"
		    android:layout_height="fill_parent"
		    android:layout_weight="1"
		    android:text="@string/str_get_offset"
		    android:textColor="@drawable/red" />
			<Button
		    android:id="@+id/close"
		    android:layout_width="wrap_content"
		    android:layout_height="fill_parent"
		    android:layout_weight="1"
		    android:text="@string/str_exit"
		    android:textColor="@drawable/red" />			
	</TableRow>
</TableLayout>	
			<TextView 
		    android:id="@+id/horizontal" 
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
		    android:text="@string/str_horizontal"
		    android:textSize="20sp"
		    android:textColor="@drawable/red"/>	
	<TableLayout 
	android:id="@+id/table_accelerometer" 
	android:layout_height="wrap_content" 
	android:layout_width="fill_parent">
	<TableRow 
	    android:id="@+id/table_acc" 
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content">
			<TextView 
		    android:id="@+id/accelerometer" 
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"
		    android:textSize="20sp" 
		    android:layout_weight="1"
		    android:text="@string/str_acc"
		    android:textColor="@drawable/greenyellow"/>
			<TextView 
		    android:id="@+id/accelerometer_x" 
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
		    android:textSize="24sp"
		    android:layout_weight="1"
		    android:textColor="@drawable/blanchedalmond"/>
			<TextView 
		    android:id="@+id/accelerometer_y" 
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"
		    android:textSize="24sp" 
		    android:layout_weight="1"
		    android:textColor="@drawable/deeppink"/>
			<TextView 
		    android:id="@+id/accelerometer_z" 
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
		    android:textSize="24sp"
		    android:layout_weight="1"
		    android:textColor="@drawable/red"/>
	</TableRow>
	</TableLayout>
	<TableLayout 
	android:id="@+id/table_accelerometer_offset" 
	android:layout_height="wrap_content" 
	android:layout_width="fill_parent">
	<TableRow 
	    android:id="@+id/table_acc_offset" 
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content">
			<TextView 
		    android:id="@+id/offset" 
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"
		    android:textSize="20sp" 
		    android:layout_weight="1"
		    android:text="@string/str_acc_offset"
		    android:textColor="@drawable/tan"/>
			<TextView 
		    android:id="@+id/acc_offset_x" 
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
		    android:textSize="24sp"
		    android:textColor="@drawable/blanchedalmond"/>
			<TextView 
		    android:id="@+id/acc_offset_y" 
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"
		    android:textSize="24sp" 
		    android:textColor="@drawable/deeppink"/>
			<TextView 
		    android:id="@+id/acc_offset_z" 
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"
		    android:textSize="24sp"
		    android:textColor="@drawable/red"/>
	</TableRow>
	</TableLayout>
	<TableLayout 
	android:id="@+id/table_accelerometer_sigma" 
	android:layout_height="wrap_content" 
	android:layout_width="fill_parent">
	<TableRow 
	    android:id="@+id/table_acc_sigma" 
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content">
			<TextView 
		    android:id="@+id/acc_sigma" 
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"
		    android:textSize="20sp" 
		    android:layout_weight="1"
		    android:text="@string/str_acc_sigma"
		    android:textColor="@drawable/tan"/>
			<TextView 
		    android:id="@+id/acc_sigma_x" 
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
		    android:textSize="24sp"
		    android:textColor="@drawable/blanchedalmond"/>
			<TextView 
		    android:id="@+id/acc_sigma_y" 
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"
		    android:textSize="24sp" 
		    android:textColor="@drawable/deeppink"/>
			<TextView 
		    android:id="@+id/acc_sigma_z" 
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
		    android:textSize="24sp"
		    android:textColor="@drawable/red"/>
	</TableRow>
	</TableLayout>
	<TableLayout 
	android:id="@+id/table_magnetic" 
	android:layout_height="wrap_content" 
	android:layout_width="fill_parent">
	<TableRow 
	    android:id="@+id/table_mag" 
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content">	
			<TextView 
		    android:id="@+id/magnetic" 
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"
		    android:layout_weight="5"
		    android:textSize="20sp" 
		    android:text="@string/str_mag"
		    android:textColor="@drawable/greenyellow"/>
			<TextView 
		    android:id="@+id/magnetic_x" 
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:textSize="24sp"
		    android:textColor="@drawable/magenta"/>
			<TextView 
		    android:id="@+id/magnetic_y" 
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:textSize="24sp"
		    android:textColor="@drawable/magenta"/>
			<TextView 
		    android:id="@+id/magnetic_z" 
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:textSize="24sp"
		    android:textColor="@drawable/magenta"/>
	</TableRow>
	</TableLayout>
	<TableLayout 
	android:id="@+id/table_magnetic_sigma" 
	android:layout_height="wrap_content" 
	android:layout_width="fill_parent">
	<TableRow 
	    android:id="@+id/table_mag_sigma" 
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content">
			<TextView 
		    android:id="@+id/magnetic_sigma" 
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"
		    android:textSize="20sp" 
		    android:layout_weight="1"
		    android:text="@string/str_mag_sigma"
		    android:textColor="@drawable/tan"/>
			<TextView 
		    android:id="@+id/mag_sigma_x" 
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
		    android:textSize="24sp"
		    android:textColor="@drawable/blanchedalmond"/>
			<TextView 
		    android:id="@+id/mag_sigma_y" 
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"
		    android:textSize="24sp" 
		    android:textColor="@drawable/deeppink"/>
			<TextView 
		    android:id="@+id/mag_sigma_z" 
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
		    android:textSize="24sp"
		    android:textColor="@drawable/red"/>
	</TableRow>
	</TableLayout>
	<TableLayout 
	android:id="@+id/table_orientation" 
	android:layout_height="wrap_content" 
	android:layout_width="fill_parent">
	<TableRow 
	    android:id="@+id/table_ori" 
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content">	
			<TextView 
		    android:id="@+id/orientation" 
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"
		    android:layout_weight="5"
		    android:textSize="20sp"
		    android:text="@string/str_ori"
		    android:textColor="@drawable/greenyellow"/>
			<TextView 
		    android:id="@+id/orientation_x" 
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:textSize="24sp"
		    android:textColor="@drawable/magenta"/>
			<TextView 
		    android:id="@+id/orientation_y" 
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:textSize="24sp"
		    android:textColor="@drawable/magenta"/>
			<TextView 
		    android:id="@+id/orientation_z" 
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:textSize="24sp"
		    android:textColor="@drawable/magenta"/>
	</TableRow>
	</TableLayout>
	<TableLayout 
	android:id="@+id/table_orientation_sigma" 
	android:layout_height="wrap_content" 
	android:layout_width="fill_parent">
	<TableRow 
	    android:id="@+id/table_ori_sigma" 
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content">
			<TextView 
		    android:id="@+id/orientation_sigma" 
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"
		    android:textSize="20sp" 
		    android:layout_weight="1"
		    android:text="@string/str_ori_sigma"
		    android:textColor="@drawable/tan"/>
			<TextView 
		    android:id="@+id/ori_sigma_x" 
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
		    android:textSize="24sp"
		    android:textColor="@drawable/blanchedalmond"/>
			<TextView 
		    android:id="@+id/ori_sigma_y" 
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"
		    android:textSize="24sp" 
		    android:textColor="@drawable/deeppink"/>
			<TextView 
		    android:id="@+id/ori_sigma_z" 
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
		    android:textSize="24sp"
		    android:textColor="@drawable/red"/>
	</TableRow>
	</TableLayout>
</TableLayout>
</LinearLayout>

